force-app/main/default/objects/Case_Created_Event__e/Case_Created_Event__e.object-meta.xml
<CustomObject>
    <label>Case Created Event</label>
    <pluralLabel>Case Created Events</pluralLabel>
</CustomObject>