force-app/main/default/objects/Case_Created_Event__e/fields/CaseDescription__c.field-meta.xml
<CustomField>
    <fullName>CaseDescription__c</fullName>
    <label>Case Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>