force-app/main/default/objects/Case_Created_Event__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>Case Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>