force-app/main/default/objects/Case_Created_Event__e/fields/CaseSubject__c.field-meta.xml
<CustomField>
    <fullName>CaseSubject__c</fullName>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>